Example Hosp Buffer

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Python/Discrete_Time/InstantRecid.png
 Python/Discrete_Time/PersonPlot.png
 Python/Discrete_Time/PersonPlot_Instant.png
 Python/Discrete_Time/test_data.csv
+HospDesserts/4hje-vua3.csv
+HospDesserts/HH_Provider_Oct2020.csv
