add in Raleigh clumpy python

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,15 @@ Python/Discrete_Time/PersonPlot_Instant.png
 Python/Discrete_Time/test_data.csv
 HospDesserts/4hje-vua3.csv
 HospDesserts/HH_Provider_Oct2020.csv
+Python/Raleigh/GIS_Data/Planning_Jurisdictions.cpg
+Python/Raleigh/GIS_Data/Planning_Jurisdictions.dbf
+Python/Raleigh/GIS_Data/Planning_Jurisdictions.prj
+Python/Raleigh/GIS_Data/Planning_Jurisdictions.shp
+Python/Raleigh/GIS_Data/Planning_Jurisdictions.shx
+Python/Raleigh/GIS_Data/Raleigh_Police_Incidents_(NIBRS).cpg
+Python/Raleigh/GIS_Data/Raleigh_Police_Incidents_(NIBRS).dbf
+Python/Raleigh/GIS_Data/Raleigh_Police_Incidents_(NIBRS).prj
+Python/Raleigh/GIS_Data/Raleigh_Police_Incidents_(NIBRS).shp
+Python/Raleigh/GIS_Data/Raleigh_Police_Incidents_(NIBRS).shx
+Python/Raleigh/Hart_CrimeStability.pdf
+Python/Raleigh/Novel_Eval_Adepeju.pdf
