--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ Python/Raleigh/GIS_Data/Raleigh_Police_Incidents_(NIBRS).shp
 Python/Raleigh/GIS_Data/Raleigh_Police_Incidents_(NIBRS).shx
 Python/Raleigh/Hart_CrimeStability.pdf
 Python/Raleigh/Novel_Eval_Adepeju.pdf
+Python/Raleigh/Fox_Stlouis_Vacancy.pdf
+Python/Raleigh/Caplan_TimeOfDay.pdf
