example report generation

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Python/Raleigh/Hart_CrimeStability.pdf
 Python/Raleigh/Novel_Eval_Adepeju.pdf
 Python/Raleigh/Fox_Stlouis_Vacancy.pdf
 Python/Raleigh/Caplan_TimeOfDay.pdf
+*.sqlite
