--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ Python/Raleigh/Novel_Eval_Adepeju.pdf
 Python/Raleigh/Fox_Stlouis_Vacancy.pdf
 Python/Raleigh/Caplan_TimeOfDay.pdf
 *.sqlite
+Python/bls_maps/__pycache__/bls_geo.cpython-37.pyc
+Python/bls_maps/biojobs.xlsx
+Python/bls_maps/.ipynb_checkpoints/BLS_Example_Maps-checkpoint.ipynb
