--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ Python/bls_maps/__pycache__/bls_geo.cpython-37.pyc
 Python/bls_maps/biojobs.xlsx
 Python/bls_maps/.ipynb_checkpoints/BLS_Example_Maps-checkpoint.ipynb
 *.pyc
+
+# No large stata files
+*.dta
